# hackathon-book

./: .gitignore  START_SERVERS.bat  cyberpunk_textbook.css  cyberpunk_textbook.html  cyberpunk_textbook.js  vercel.json
backend/: CHATBOT_README.md  (+12 more)
physical-ai-textbook/: README.md  cyberpunk_textbook.css  cyberpunk_textbook.js  docusaurus.config.js  package-lock.json  package.json  pyproject.toml  sidebars.js  tsconfig.json
physical-ai-textbook/.github/workflows/: deploy.yml
physical-ai-textbook/api/: check_db.py  ingest_book.py  main.py  requirements.txt  test_rag_local.py
physical-ai-textbook/api/agents/: agent_framework.py
physical-ai-textbook/api/models/: base.py
physical-ai-textbook/api/routes/: auth_routes.py  chapter_routes.py  rag_routes.py  summarization_routes.py  translation_routes.py
physical-ai-textbook/api/services/: __init__.py  chapter_service.py  document_ingestion_service.py  rag_service.py  user_services.py  vector_db_service.py
physical-ai-textbook/api/skills/: __init__.py  textbook_skills.py
physical-ai-textbook/api/utils/: config.py  error_handler.py
physical-ai-textbook/docs/: accessibility-statement.md  intro.md
physical-ai-textbook/docs/appendix/: index.md
physical-ai-textbook/docs/capstone-project/: index.md
physical-ai-textbook/docs/conversational-robotics/: index.md
physical-ai-textbook/docs/embodied-intelligence/: index.md
physical-ai-textbook/docs/gazebo-unity/: index.md
physical-ai-textbook/scripts/: ingest-book.js  ingest_book.py  setup.sh  validate-content.js
physical-ai-textbook/types/: docusaurus.d.ts
(+57 files in other folders)
