[tool.poetry]
name = "physical-ai-textbook-backend"
version = "0.1.0"
description = "FastAPI backend for the Physical AI & Humanoid Robotics textbook RAG system"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pydantic = "^2.5.0"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
asyncpg = "^0.29.0"
qdrant-client = "^1.8.0"
openai = "^1.10.0"
better-auth = "^0.3.2"
aiofiles = "^23.2.1"
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
httpx = "^0.25.0"
pydantic-settings = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.7.0"
flake8 = "^6.0.0"
mypy = "^1.4.1"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "api.main:main"